# rgr

./: .gitignore  CMakeLists.txt  README.md
algorithms/caesar/: caesar.cpp
algorithms/cardano/: cardano.cpp
algorithms/code_word/: code_word.cpp
algorithms/double_square/: double_square.cpp
algorithms/hill/: hill.cpp
algorithms/vertical_permutation/: vertical_permutation.cpp
scripts/: install.sh  uninstall.sh
src/: args_parser.cpp  args_parser.h  crypto_api.h  file_utils.cpp  file_utils.h  key_utils.cpp  key_utils.h  library_loader.cpp  library_loader.h  main.cpp  secure_memory.cpp  secure_memory.h
tests/: crypto_tests.cpp
